fix: overflow on application content

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,7 @@ app-navbar {
 .content {
   height: 93%;
   position: fixed;
+  overflow: auto;
   bottom: 0;
   width: 100%;
 }
